--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,39 +1,41 @@
-<!-- !!!!!!!!!!! IST NOCH FALSCH !!!!!!!!
-<img class="about-me-background" src="assets/img/about-me-background.svg" alt="" /> -->
-
-<div class="about-me-container">
-    <div class="about-me-text">
-        <div class="about-me-text-top">
-            <h2>About me</h2>
-            <p>Hey there! I'm Alexander, a frontend developer fueled by a passion for crafting user-friendly digital
-                experiences. With a talent for problem-solving and an eye for detail, I specialize in translating
-                complex
-                ideas into elegant designs.</p>
-            <p>Let's connect and create something amazing together!</p>
+<div class="about-me">
+    <div class="about-me-container">
+        <div class="about-me-text">
+            <div class="about-me-text-top">
+                <h2>About me</h2>
+                <p>Hey there! I'm Alexander, a frontend developer fueled by a passion for crafting user-friendly digital
+                    experiences. With a talent for problem-solving and an eye for detail, I specialize in translating
+                    complex
+                    ideas into elegant designs.</p>
+                <p>Let's connect and create something amazing together!</p>
+            </div>
+            <div class="about-me-highlight-container">
+                <div class="about-me-highlight">
+                    <img src="assets/img/location.svg" alt="">
+                    <p>Flexible in terms of working environments, I can work effectively both on-site in Munich and
+                        remotely.
+                    </p>
+                </div>
+                <div class="about-me-highlight">
+                    <img src="assets/img/bulb.svg" alt="">
+                    <p>I am open-minded and always looking for personal challenges to constantly improve my knowledge
+                        and
+                        skills.</p>
+                </div>
+                <div class="about-me-highlight">
+                    <img src="assets/img/puzzle.svg" alt="">
+                    <p>In my profession, programming isn't just about writing code; it's a creative form of
+                        problem-solving.
+                        I
+                        take pride in my ability to distill complex technical challenges into simple, user-friendly
+                        solutions.
+                        This way, I help you achieve your goals and bring your visions to life.</p>
+                </div>
+            </div>
         </div>
-        <div class="about-me-highlight-container">
-            <div class="about-me-highlight">
-                <img src="assets/img/location.svg" alt="">
-                <p>Flexible in terms of working environments, I can work effectively both on-site in Munich and
-                    remotely.
-                </p>
-            </div>
-            <div class="about-me-highlight">
-                <img src="assets/img/bulb.svg" alt="">
-                <p>I am open-minded and always looking for personal challenges to constantly improve my knowledge and
-                    skills.</p>
-            </div>
-            <div class="about-me-highlight">
-                <img src="assets/img/puzzle.svg" alt="">
-                <p>In my profession, programming isn't just about writing code; it's a creative form of problem-solving.
-                    I
-                    take pride in my ability to distill complex technical challenges into simple, user-friendly
-                    solutions.
-                    This way, I help you achieve your goals and bring your visions to life.</p>
-            </div>
+        <div class="about-me-picture">
+            <img src="" alt="">
         </div>
     </div>
-    <div class="about-me-picture">
-        <img src="" alt="">
-    </div>
+    <img class="about-me-background" src="assets/img/about-me-background.svg" alt="" />
 </div>
