--- a/src/styles.scss
+++ b/src/styles.scss
@@ -49,7 +49,8 @@ body {
 }
 
 h1,
-h2 {
+h2,
+h3 {
     margin: 0;
 }
 
@@ -62,6 +63,12 @@ h1 {
 h2 {
     font-size: 90px;
     line-height: 108px;
+    font-weight: 700;
+}
+
+h3 {
+    font-size: 32px;
+    line-height: 38px;
     font-weight: 700;
 }
 
