--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -1,4 +1,4 @@
-<div class="about-me">
+<div class="about-me" id="about-me">
     <div class="about-me-container">
         <div class="about-me-text">
             <div class="about-me-text-top">
