--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -12,7 +12,7 @@
 
 .about-me-container {
     padding: 0 100px;
-    height: 100vh;
+    min-height: 100vh;
     display: flex;
     align-items: center;
     gap: 128px;
