--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,8 @@
 <header>
     <div class="name">Alexander Riedel</div>
     <nav>
-        <a routerLink="/about">About me</a>
-        <a routerLink="/about">Skills</a>
-        <a routerLink="/portfolio">Portfolio</a>
+        <a href="#about-me">About me</a>
+        <a href="#skills">Skills</a>
+        <a href="#portfolio">Portfolio</a>
     </nav>
 </header>
