--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -15,8 +15,17 @@ header {
         display: flex;
         font-size: 24px;
 
-        :hover {
-            color: #70E61C;
+        a {
+            color: #FFFFFF;
+            text-decoration: none;
+
+            &:hover {
+                color: #70E61C;
+            }
+
+            &:active {
+                color: #70E61C;
+            }
         }
     }
 }
