--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -10,18 +10,21 @@
     button {
         z-index: 1;
         padding: 15px 30px;
+        border: 1px solid #70E61C;
         border-radius: 8px;
         box-shadow: 4px 4px 4px 0px #00000040;
         background-color: #70E61C;
 
         &:hover {
             transform: scale(1.2);
+            border: 1px solid #9747FF;
             box-shadow: none;
             background-color: #9747FF;
         }
 
         &:active {
-            transform: scale(1.0);
+            transform: scale(1.1);
+            border: 1px solid #FFFFFF;
             box-shadow: none;
             background-color: #FFFFFF;
             color: #000000;
