--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -1,4 +1,4 @@
-<div class="skills-container">
+<div class="skills-container" id="skills">
     <div class="skills-img-container">
         <div class="skill">
             <img src="assets/img/skills/html.svg" alt="">
@@ -23,6 +23,18 @@
         <div class="skill">
             <img src="assets/img/skills/firebase.svg" alt="">
             <span>Firebase</span>
+        </div>
+        <div class="skill">
+            <img src="assets/img/skills/materialdesign.svg" alt="">
+            <span>Material Design</span>
+        </div>
+        <div class="skill">
+            <img src="assets/img/skills/wordpress.svg" alt="">
+            <span>WordPress</span>
+        </div>
+        <div class="skill">
+            <img src="assets/img/skills/discord-mark-white.svg" alt="">
+            <span>Discord</span>
         </div>
         <div class="skill">
             <img src="assets/img/skills/git.svg" alt="">
