add contact and reviews, bug fixes

--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -11,19 +11,19 @@
             </div>
             <div class="about-me-highlight-container">
                 <div class="about-me-highlight">
-                    <img src="assets/img/location.svg" alt="">
+                    <img src="assets/img/about-me/location.svg" alt="">
                     <p>Flexible in terms of working environments, I can work effectively both on-site in Munich and
                         remotely.
                     </p>
                 </div>
                 <div class="about-me-highlight">
-                    <img src="assets/img/bulb.svg" alt="">
+                    <img src="assets/img/about-me/bulb.svg" alt="">
                     <p>I am open-minded and always looking for personal challenges to constantly improve my knowledge
                         and
                         skills.</p>
                 </div>
                 <div class="about-me-highlight">
-                    <img src="assets/img/puzzle.svg" alt="">
+                    <img src="assets/img/about-me/puzzle.svg" alt="">
                     <p>In my profession, programming isn't just about writing code; it's a creative form of
                         problem-solving.
                         I
@@ -37,5 +37,5 @@
             <img src="" alt="">
         </div>
     </div>
-    <img class="about-me-background" src="assets/img/about-me-background.svg" alt="" />
+    <img class="about-me-background" src="assets/img/about-me/background.svg" alt="" />
 </div>
