--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -8,7 +8,7 @@
             <span class="landing-page-slogan">FRONTEND DEVELOPER</span>
         </div>
     </div>
-    <button>Let's talk!</button>
+    <a href="#contact"><button>Let's talk!</button></a>
     <div class="landing-page-bottom">
         <div class="landing-page-btns">
             <div class="green-line"></div>
@@ -16,6 +16,6 @@
             <a href="#"><img src="assets/img/email.svg" alt=""></a>
             <a href="https://www.linkedin.com/in/-alexanderriedel-/"><img src="assets/img/linkedin.svg" alt=""></a>
         </div>
-        <div class="landing-page-scrolldown">Scroll down &#10132;</div>
+        <div class="landing-page-scrolldown"><a href="#about-me">Scroll down &#10132;</a></div>
     </div>
 </div>
