--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,6 +1,6 @@
 header {
     height: 110px;
-    padding: 0 100px;
+    padding: 0 150px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -9,6 +9,8 @@ header {
     left: 0;
     right: 0;
     z-index: 999;
+    background-color: #141D2FDD;
+    backdrop-filter: blur(5px);
 
     nav {
         gap: 29px;
