--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -75,8 +75,8 @@
 }
 
 .landing-page-bottom {
+    margin-right: 150px;
     position: absolute;
-    padding-right: 100px;
     left: 0;
     right: 0;
     bottom: 48px;
@@ -88,13 +88,13 @@
 .landing-page-btns {
     display: flex;
     align-items: center;
-    gap: 42px;
+    gap: 32px;
 
     .green-line {
-        width: 100px;
+        width: calc(150px - 32px);
         height: 1px;
         background-color: #70E61C;
-        border: 3px solid #70E61C;
+        border: 2px solid #70E61C;
         border-top-right-radius: 5px;
         border-bottom-right-radius: 5px;
     }
@@ -116,4 +116,9 @@
 .landing-page-scrolldown {
     writing-mode: vertical-lr;
     font-size: 24px;
+
+    a {
+        color: #FFFFFF;
+        text-decoration: none;
+    }
 }
