--- a/src/app/skills/skills.component.html
+++ b/src/app/skills/skills.component.html
@@ -50,7 +50,10 @@
         </div>
     </div>
     <div class="skills-text-container">
-        <h2>Skills</h2>
+        <div class="skills-headline">
+            <h2>Skills</h2>
+            <div class="skills-headline-line"></div>
+        </div>
         <div class="skills-text">
             My journey has involved working on diverse projects, employing a range of frontend technologies and
             concepts. I am open to embracing new technologies and methodologies to Continously enhance my skills and
@@ -61,6 +64,6 @@
                 Feel free to contact me. I look forward to expanding on my previous knowledge.
             </div>
         </div>
-        <button>Get in touch</button>
+        <a href="#contact"><button>Get in touch</button></a>
     </div>
 </div>
