--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-    <div class="name">Alexander Riedel</div>
+    <div class="name"><a href="#">Alexander Riedel</a></div>
     <nav>
         <a href="#about-me">About me</a>
         <a href="#skills">Skills</a>
