--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -3,13 +3,17 @@
         <div class="portfolio-headline-line"></div>
         <h2>Portfolio</h2>
     </div>
-    <div class="portfolio-headline-text">Explore a selection of my work here - Interact with projects to see my skills in action.</div>
+    <div class="portfolio-headline-text">Explore a selection of my work here - Interact with projects to see my skills
+        in action.</div>
     <div class="portfolio-project-container">
+
         <div class="portfolio-project" *ngFor="let project of projects; index as i"
             (mouseenter)="showAlternateContent(i)" (mouseleave)="showOriginalContent(i)">
+            
             <div class="portfolio-project-img" [class.d]="!hoverStates[i]" [class.dn]="hoverStates[i]">
                 <img [src]="project.img" [alt]="project.name" [class.fad-in]="!hoverStates[i]">
             </div>
+
             <div class="portfolio-project-hover" [class.d]="hoverStates[i]" [class.dn]="!hoverStates[i]">
                 <div class="portfolio-project-btns">
                     <a [href]="project.githubLink"><button class="protfolio-github-btn">GitHub</button></a>
@@ -21,6 +25,8 @@
                     <div class="portfolio-project-skills">{{ project.skills }}</div>
                 </div>
             </div>
+
         </div>
+
     </div>
 </div>
