--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,6 +1,7 @@
 .contact-container {
-    min-height: 100vh;
-    scroll-margin-top: 120px;
+    margin-top: 200px; 
+    min-height: calc(100vh - 110px);
+    scroll-margin-top: 110px;
 }
 
 .contact-headline {
@@ -177,7 +178,7 @@ input[type=submit]:hover {
     left: 0;
     width: 24px;
     height: 24px;
-    border: 2px solid #bfbfc0;
+    border: 2px solid #70E61C;
     border-radius: 50%;
 }
 
@@ -224,48 +225,48 @@ input[type=submit]:hover {
 
 @-moz-keyframes splash-12 {
     40% {
-        background: #866efb;
-        box-shadow: 0 -18px 0 -8px #866efb, 16px -8px 0 -8px #866efb, 16px 8px 0 -8px #866efb, 0 18px 0 -8px #866efb, -16px 8px 0 -8px #866efb, -16px -8px 0 -8px #866efb;
+        background: #9747FF;
+        box-shadow: 0 -18px 0 -8px #9747FF, 16px -8px 0 -8px #9747FF, 16px 8px 0 -8px #9747FF, 0 18px 0 -8px #9747FF, -16px 8px 0 -8px #9747FF, -16px -8px 0 -8px #9747FF;
     }
 
     100% {
-        background: #866efb;
+        background: #9747FF;
         box-shadow: 0 -36px 0 -10px transparent, 32px -16px 0 -10px transparent, 32px 16px 0 -10px transparent, 0 36px 0 -10px transparent, -32px 16px 0 -10px transparent, -32px -16px 0 -10px transparent;
     }
 }
 
 @-webkit-keyframes splash-12 {
     40% {
-        background: #866efb;
-        box-shadow: 0 -18px 0 -8px #866efb, 16px -8px 0 -8px #866efb, 16px 8px 0 -8px #866efb, 0 18px 0 -8px #866efb, -16px 8px 0 -8px #866efb, -16px -8px 0 -8px #866efb;
+        background: #9747FF;
+        box-shadow: 0 -18px 0 -8px #9747FF, 16px -8px 0 -8px #9747FF, 16px 8px 0 -8px #9747FF, 0 18px 0 -8px #9747FF, -16px 8px 0 -8px #9747FF, -16px -8px 0 -8px #9747FF;
     }
 
     100% {
-        background: #866efb;
+        background: #9747FF;
         box-shadow: 0 -36px 0 -10px transparent, 32px -16px 0 -10px transparent, 32px 16px 0 -10px transparent, 0 36px 0 -10px transparent, -32px 16px 0 -10px transparent, -32px -16px 0 -10px transparent;
     }
 }
 
 @-o-keyframes splash-12 {
     40% {
-        background: #866efb;
-        box-shadow: 0 -18px 0 -8px #866efb, 16px -8px 0 -8px #866efb, 16px 8px 0 -8px #866efb, 0 18px 0 -8px #866efb, -16px 8px 0 -8px #866efb, -16px -8px 0 -8px #866efb;
+        background: #9747FF;
+        box-shadow: 0 -18px 0 -8px #9747FF, 16px -8px 0 -8px #9747FF, 16px 8px 0 -8px #9747FF, 0 18px 0 -8px #9747FF, -16px 8px 0 -8px #9747FF, -16px -8px 0 -8px #9747FF;
     }
 
     100% {
-        background: #866efb;
+        background: #9747FF;
         box-shadow: 0 -36px 0 -10px transparent, 32px -16px 0 -10px transparent, 32px 16px 0 -10px transparent, 0 36px 0 -10px transparent, -32px 16px 0 -10px transparent, -32px -16px 0 -10px transparent;
     }
 }
 
 @keyframes splash-12 {
     40% {
-        background: #866efb;
-        box-shadow: 0 -18px 0 -8px #866efb, 16px -8px 0 -8px #866efb, 16px 8px 0 -8px #866efb, 0 18px 0 -8px #866efb, -16px 8px 0 -8px #866efb, -16px -8px 0 -8px #866efb;
+        background: #9747FF;
+        box-shadow: 0 -18px 0 -8px #9747FF, 16px -8px 0 -8px #9747FF, 16px 8px 0 -8px #9747FF, 0 18px 0 -8px #9747FF, -16px 8px 0 -8px #9747FF, -16px -8px 0 -8px #9747FF;
     }
 
     100% {
-        background: #866efb;
+        background: #9747FF;
         box-shadow: 0 -36px 0 -10px transparent, 32px -16px 0 -10px transparent, 32px 16px 0 -10px transparent, 0 36px 0 -10px transparent, -32px 16px 0 -10px transparent, -32px -16px 0 -10px transparent;
     }
 }
