--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,14 @@
 <footer>
-    <p>&copy; 2024 Mein Portfolio. Alle Rechte vorbehalten.</p>
+    <div class="footer-container">
+        <div class="footer-left">
+            <div class="footer-name">Alexander Riedel</div>
+            <div class="legal-notice">Legal Notice</div>
+        </div>
+        <div class="footer-middle">&#169; Alexander Riedel 2024</div>
+        <div class="footer-right">
+            <a href="https://github.com/Alexander-Riedel"><img src="assets/img/github.svg" alt=""></a>
+            <a href="#"><img src="assets/img/email.svg" alt=""></a>
+            <a href="https://www.linkedin.com/in/-alexanderriedel-/"><img src="assets/img/linkedin.svg" alt=""></a>
+        </div>
+    </div>
 </footer>
