--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -31,3 +31,12 @@ header {
         }
     }
 }
+
+.name {
+    a {
+        font-size: 20px;
+        color: #FFFFFF;
+        text-decoration: none;
+    }
+
+}
