--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -1,7 +1,7 @@
 .skills-container {
     display: flex;
     margin-top: 200px;
-    scroll-margin-top: 150px;
+    scroll-margin-top: 110px;
     min-height: calc(100vh - 110px);
     position: relative;
 }
@@ -11,7 +11,7 @@
     width: 60%;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
-    gap: 80px;
+    gap: 0 50px;
 }
 
 .skill {
@@ -19,12 +19,12 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 10px;
+    gap: 6px;
 
     img {
-        width: 72px;
+        width: 60px;
         object-fit: cover;
-        padding: 15px;
+        padding: 12px;
         transition: transform 0.3s ease;
 
         &:hover {
@@ -34,11 +34,13 @@
 }
 
 .skills-text-container {
+    min-height: calc(100vh - 110px);
     margin-left: 50px;
     width: 40%;
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    justify-content: center;
     gap: 40px;
 
     button {
