--- a/src/app/about-me/about-me.component.html
+++ b/src/app/about-me/about-me.component.html
@@ -35,6 +35,9 @@
         </div>
         <div class="about-me-picture">
             <img src="" alt="">
+            <div class="about-me-shadows">
+                <img src="assets/img/green-purple-shadow-1.svg" alt="">
+            </div>
         </div>
     </div>
     <img class="about-me-background" src="assets/img/about-me/background.svg" alt="" />
