--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -63,4 +63,9 @@
             </form>
         </div>
     </div>
+
+    <div class="contact-right-shadow">
+        <img src="assets/img/purple-shadow-2.svg" alt="">
+    </div>
+
 </div>
