--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -12,6 +12,21 @@ header {
     background-color: #141D2FDD;
     backdrop-filter: blur(5px);
 
+    .burger-menu {
+        display: none;
+        flex-direction: column;
+        justify-content: space-between;
+        height: 24px;
+        cursor: pointer;
+
+        span {
+            display: block;
+            width: 30px;
+            height: 3px;
+            background-color: #FFFFFF;
+        }
+    }
+
     nav {
         gap: 29px;
         display: flex;
@@ -29,14 +44,22 @@ header {
                 color: #70E61C;
             }
         }
-    }
-}
 
-.name {
-    a {
+        &.active {
+            display: flex;
+            flex-direction: column;
+            background-color: #141D2FDD;
+
+            a {
+                padding: 10px 20px;
+                text-align: center;
+            }
+        }
+    }
+
+    .name a {
         font-size: 20px;
         color: #FFFFFF;
         text-decoration: none;
     }
-
 }
