--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -6,8 +6,9 @@
 }
 
 .about-me-background {
+    width: 100%;
     position: absolute;
-    top: 25vh;
+    top: 30vh;
     left: 0;
     right: 0;
     z-index: -1;
@@ -55,6 +56,16 @@
     }
 }
 
-.about-me-background {
-    width: 100%;
+.about-me-picture {
+    width: 50%;
+}
+
+.about-me-shadows {
+    display: flex;
+
+    img {
+        width: 100%;
+        object-fit: cover;
+        z-index: -2;
+    }
 }
