--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,7 +1,8 @@
 .contact-container {
-    margin-top: 200px; 
+    margin-top: 200px;
     min-height: calc(100vh - 110px);
     scroll-margin-top: 110px;
+    position: relative;
 }
 
 .contact-headline {
@@ -269,4 +270,11 @@ input[type=submit]:hover {
         background: #9747FF;
         box-shadow: 0 -36px 0 -10px transparent, 32px -16px 0 -10px transparent, 32px 16px 0 -10px transparent, 0 36px 0 -10px transparent, -32px 16px 0 -10px transparent, -32px -16px 0 -10px transparent;
     }
+}
+
+.contact-right-shadow {
+    position: absolute;
+    top: -200px;
+    right: 0;
+    z-index: -1;
 }
