--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,11 @@
 <header>
     <div class="name"><a href="#">Alexander Riedel</a></div>
-    <nav>
+    <div class="burger-menu" (click)="toggleMenu()">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+    <nav [class.active]="menuOpen">
         <a href="#about-me">About me</a>
         <a href="#skills">Skills</a>
         <a href="#portfolio">Portfolio</a>
