--- a/src/app/reviews/reviews.component.scss
+++ b/src/app/reviews/reviews.component.scss
@@ -2,6 +2,9 @@
     display: flex;
     justify-content: flex-end;
     margin: 200px 0 0 200px;
+    display: flex;
+    flex-direction: column;
+    gap: 32px;
 }
 
 .review-container {
@@ -12,19 +15,32 @@
 
 .review-box {
     height: 275px;
+    max-width: 1000px;
+    border: 4px solid #9747FF;
+    border-radius: 32px;
+    position: relative;
+    display: flex;
+}
+
+.review-box-content {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    border: 4px solid #9747FF;
-    border-radius: 32px;
+    overflow: hidden;
+}
+
+.review-box-quote {
+    position: absolute;
+    top: -40px;
+    left: -66px;
 }
 
 .review {
     padding: 32px 64px 0 128px;
     font-size: 20px;
     line-height: 24px;
-    hyphens: auto; 
-	text-align: justify;
+    hyphens: auto;
+    text-align: justify;
 }
 
 .review-author {
@@ -47,6 +63,7 @@
 .review-author-name {
     display: flex;
     justify-content: flex-end;
+    font-size: 18px;
 }
 
 .review-picture-box {
@@ -60,8 +77,20 @@
 .review-picture {
     height: 100%;
     aspect-ratio: 1/1;
-    border: 4px solid #70E61C;
-    border-radius: 50%;
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+
+    img {
+        height: 90%;
+        border-radius: 50%;
+        border: 4px solid #70E61C;
+        transition: all 0.3s ease;
+
+        &:hover {
+            transform: scale(1.1);
+        }
+    }
 }
 
 .review-picture-line {
@@ -69,4 +98,99 @@
     width: 100%;
     background-color: #70E61C;
     border: 2px solid #70E61C;
+}
+
+.review-navigation {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+
+    img {
+        cursor: pointer;
+    }
+}
+
+.review-dots {
+    height: 50px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+
+    img {
+        height: 10px;
+        padding: 12px;
+        border: 2px solid #70E61C00;
+
+        &:hover {
+            border: 2px solid #70E61C;
+            border-radius: 50%;
+        }
+    }
+}
+
+.arrow-button {
+    height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    padding: 12px;
+    border: 2px solid #70E61C00;
+
+    &:hover {
+        border: 2px solid #70E61C;
+        border-radius: 50%;
+    }
+}
+
+
+
+@keyframes slideInFromRight {
+    0% {
+        transform: translateX(50%);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes slideInFromLeft {
+    0% {
+        transform: translateX(-50%);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes slideInFromBottom {
+    0% {
+        transform: translateY(50%);
+        opacity: 0;
+    }
+
+    100% {
+        transform: translateY(0);
+        opacity: 1;
+    }
+}
+
+.slide-in-from-right {
+    animation: slideInFromRight 0.5s ease forwards;
+}
+
+.slide-in-from-left {
+    animation: slideInFromLeft 0.5s ease forwards;
+}
+
+.slide-in-from-bottom {
+    animation: slideInFromBottom 0.5s ease forwards;
 }
