--- a/src/app/about-me/about-me.component.scss
+++ b/src/app/about-me/about-me.component.scss
@@ -1,7 +1,10 @@
-.about-me {
-    margin-top: 200px;
+#about-me {
+    margin-top: 120px;
+    min-height: calc(100dvh - 110px);
     scroll-margin-top: 110px;
-    min-height: calc(100vh - 110px);
+}
+
+.about-me {
     position: relative;
 }
 
@@ -15,7 +18,7 @@
 }
 
 .about-me-container {
-    min-height: calc(100vh - 110px);
+    min-height: calc(100dvh - 110px);
     padding: 0 150px;
     display: flex;
     align-items: center;
@@ -25,6 +28,7 @@
 .about-me-text {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     width: 50%;
     gap: 36px;
 }
