--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,3 +1,9 @@
+#contact {
+    margin-top: 120px;
+    min-height: calc(100dvh - 110px);
+    scroll-margin-top: 110px;
+}
+
 .contact-container {
     margin-top: 200px;
     min-height: calc(100vh - 110px);
