--- a/src/app/header/header.responsive.scss
+++ b/src/app/header/header.responsive.scss
@@ -1,25 +1,37 @@
-@media screen and (max-width:1400px) {}
+.burger-menu {
+    display: none;
+}
 
 @media screen and (max-width:1200px) {
 
-    body.menu-open {
-        overflow: hidden;
-    }
-
     header {
-        padding: 0 20px;
+        padding: 0 40px;
 
         .burger-menu {
+            height: 24px;
+            cursor: pointer;
             display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+
+            span {
+                width: 30px;
+                height: 3px;
+                background-color: #FFFFFF;
+            }
         }
 
         nav {
             display: none;
+            gap: 80px;
+            font-size: 36px;
         }
     }
 
     nav.active {
-        display: flex;
+        display: flex !important;
+        flex-direction: column;
+        align-items: center;
         justify-content: center;
         position: absolute;
         top: 110px;
@@ -27,18 +39,15 @@
         bottom: 0;
         left: 0;
         min-height: calc(100dvh - 110px);
-        animation: slideDown 0.3s ease-out;
-        overflow: hidden;
+        animation: fadeIn 0.3s ease-out;
+        background-color: #141D2FDD;
     }
 
-    @keyframes slideDown {
+    @keyframes fadeIn {
         from {
-            transform: translateY(-100%);
             opacity: 0;
         }
-
         to {
-            transform: translateY(0);
             opacity: 1;
         }
     }
