--- a/src/app/portfolio/portfolio.component.html
+++ b/src/app/portfolio/portfolio.component.html
@@ -1,44 +1,48 @@
-<div class="portfolio-container" id="portfolio">
+<section id="portfolio">
 
-    <div class="portfolio-headline">
-        <div class="portfolio-headline-line"></div>
-        <h2>Portfolio</h2>
-    </div>
+    <div class="portfolio-container">
 
-    <div class="portfolio-headline-text">
-        Explore a selection of my work here - Interact with projects to see my skills in action.
-    </div>
+        <div class="portfolio-headline">
+            <div class="portfolio-headline-line"></div>
+            <h2>Portfolio</h2>
+        </div>
 
-    <div class="portfolio-project-container">
+        <div class="portfolio-headline-text">
+            Explore a selection of my work here - Interact with projects to see my skills in action.
+        </div>
 
-        <div class="portfolio-project" *ngFor="let project of projects; index as i"
-            (mouseenter)="showAlternateContent(i)" (mouseleave)="showOriginalContent(i)">
+        <div class="portfolio-project-container">
 
-            <div class="portfolio-project-img" [class.d]="!hoverStates[i]" [class.dn]="hoverStates[i]">
-                <img [src]="project.img" [alt]="project.name" [class.fad-in]="!hoverStates[i]">
-            </div>
+            <div class="portfolio-project" *ngFor="let project of projects; index as i"
+                (mouseenter)="showAlternateContent(i)" (mouseleave)="showOriginalContent(i)">
 
-            <div class="portfolio-project-hover" [class.d]="hoverStates[i]" [class.dn]="!hoverStates[i]">
-                <div class="portfolio-project-btns">
-                    <a [href]="project.githubLink"><button class="protfolio-github-btn">GitHub</button></a>
-                    <a [href]="project.liveLink"><button class="protfolio-livetest-btn">Live Test</button></a>
+                <div class="portfolio-project-img" [class.d]="!hoverStates[i]" [class.dn]="hoverStates[i]">
+                    <img [src]="project.img" [alt]="project.name" [class.fad-in]="!hoverStates[i]">
                 </div>
-                <div class="portfolio-project-text">
-                    <h3>{{ project.name }}</h3>
-                    <div class="portfolio-project-description">{{ project.description }}</div>
-                    <div class="portfolio-project-skills">{{ project.skills }}</div>
+
+                <div class="portfolio-project-hover" [class.d]="hoverStates[i]" [class.dn]="!hoverStates[i]">
+                    <div class="portfolio-project-btns">
+                        <a [href]="project.githubLink"><button class="protfolio-github-btn">GitHub</button></a>
+                        <a [href]="project.liveLink"><button class="protfolio-livetest-btn">Live Test</button></a>
+                    </div>
+                    <div class="portfolio-project-text">
+                        <h3>{{ project.name }}</h3>
+                        <div class="portfolio-project-description">{{ project.description }}</div>
+                        <div class="portfolio-project-skills">{{ project.skills }}</div>
+                    </div>
                 </div>
+
             </div>
 
         </div>
 
+        <div class="portfolio-right-shadow">
+            <img src="assets/img/blue-shadow-2.svg" alt="">
+        </div>
+        <div class="portfolio-left-shadow">
+            <img src="assets/img/green-shadow-1.svg" alt="">
+        </div>
+
     </div>
 
-    <div class="portfolio-right-shadow">
-        <img src="assets/img/blue-shadow-2.svg" alt="">
-    </div>
-    <div class="portfolio-left-shadow">
-        <img src="assets/img/green-shadow-1.svg" alt="">
-    </div>
-
-</div>
+</section>
