--- a/src/app/portfolio/portfolio.component.scss
+++ b/src/app/portfolio/portfolio.component.scss
@@ -1,7 +1,10 @@
-.portfolio-container {
-    margin-top: 200px;
+#portfolio {
+    margin-top: 120px;
+    min-height: calc(100dvh - 110px);
     scroll-margin-top: 110px;
-    min-height: calc(100vh - 110px);
+}
+
+.portfolio-container {
     position: relative;
 }
 
