--- a/src/app/skills/skills.component.scss
+++ b/src/app/skills/skills.component.scss
@@ -1,3 +1,9 @@
+#skills {
+    margin-top: 120px;
+    min-height: calc(100dvh - 110px);
+    scroll-margin-top: 110px;
+}
+
 .skills-container {
     display: flex;
     margin-top: 200px;
