--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -83,6 +83,22 @@
         flex-direction: column;
         align-items: flex-end;
         gap: 20px;
+
+        .form-name,
+        .form-email,
+        .form-message {
+            width: 100%;
+            display: flex;
+            position: relative;
+
+            span {
+                position: absolute;
+                font-size: 14px;
+                color: #FF0000;
+                top: 18px;
+                right: 12px;
+            }
+        }
     }
 }
 
@@ -120,15 +136,24 @@ textarea {
     align-items: center;
     font-size: 14px;
     gap: 12px;
+    position: relative;
 
     a {
         color: #9747FF;
         text-decoration: none;
     }
+
+    .checkbox-message {
+        position: absolute;
+        font-size: 14px;
+        color: #FF0000;
+        top: 36px;
+        left: 0;
+    }
 }
 
 input[type=submit] {
-    background-color: #B6B6B6;
+    background-color: #70E61C;
     color: white;
     padding: 15px 30px;
     border: none;
@@ -137,10 +162,41 @@ input[type=submit] {
     box-shadow: 4px 4px 4px 0px #00000040;
     font-family: 'Poppins', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     font-size: 24px;
+
+    &:hover {
+        transform: scale(1.2);
+        border: 1px solid #9747FF;
+        box-shadow: none;
+        background-color: #9747FF;
+    }
+
+    &:active {
+        transform: scale(1.1);
+        border: 1px solid #FFFFFF;
+        box-shadow: none;
+        background-color: #FFFFFF;
+        color: #000000;
+    }
 }
 
-input[type=submit]:hover {
-    background-color: #70E61C;
+input[type=submit]:disabled {
+    background-color: #B6B6B6;
+    color: white;
+    padding: 15px 30px;
+    border: none;
+    border-radius: 4px;
+    cursor: default;
+    box-shadow: 4px 4px 4px 0px #00000040;
+    font-family: 'Poppins', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-size: 24px;
+
+    &:hover {
+        transform: none;
+    }
+
+    &:active {
+        transform: none;
+    }
 }
 
 .checkbox-wrapper-12 {
