update responsive style

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -7,7 +7,7 @@
         <div class="footer-middle">&#169; Alexander Riedel 2024</div>
         <div class="footer-right">
             <a href="https://github.com/Alexander-Riedel"><img src="assets/img/github.svg" alt=""></a>
-            <a href="#"><img src="assets/img/email.svg" alt=""></a>
+            <a href="#contact"><img src="assets/img/email.svg" alt=""></a>
             <a href="https://www.linkedin.com/in/-alexanderriedel-/"><img src="assets/img/linkedin.svg" alt=""></a>
         </div>
     </div>
