--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -13,7 +13,7 @@
         <div class="landing-page-btns">
             <div class="green-line"></div>
             <a href="https://github.com/Alexander-Riedel"><img src="assets/img/github.svg" alt=""></a>
-            <a href="#"><img src="assets/img/email.svg" alt=""></a>
+            <a href="#contact"><img src="assets/img/email.svg" alt=""></a>
             <a href="https://www.linkedin.com/in/-alexanderriedel-/"><img src="assets/img/linkedin.svg" alt=""></a>
         </div>
         <div class="landing-page-scrolldown"><a href="#about-me">Scroll down &#10132;</a></div>
