--- a/src/app/landing-page/landing-page.component.scss
+++ b/src/app/landing-page/landing-page.component.scss
@@ -1,6 +1,6 @@
 .landing-page-container {
     position: relative;
-    height: calc(100vh - 110px);
+    height: calc(100dvh - 110px);
     display: flex;
     flex-direction: column;
     justify-content: center;
