--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -126,9 +126,10 @@ textarea {
     &::placeholder {
         color: #FFFFFF;
         font-family: 'Poppins', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-        font-size: 16px;
+        font-size: 14px;
         opacity: 0.7;
     }
+
 }
 
 .contact-policy-check {
@@ -141,6 +142,10 @@ textarea {
     a {
         color: #9747FF;
         text-decoration: none;
+
+        &:hover {
+            text-decoration: underline;
+        }
     }
 
     .checkbox-message {
@@ -233,6 +238,11 @@ input[type=submit]:disabled {
     height: 24px;
     top: calc(50vh - 12px);
     left: calc(50vw - 12px);
+
+    &:hover {
+        background-color: #797EF3;
+        border-radius: 50%;
+    }
 }
 
 .checkbox-wrapper-12 .cbx input {
