--- a/src/styles.scss
+++ b/src/styles.scss
@@ -96,3 +96,32 @@ button {
     justify-content: center;
     align-items: center;
 }
+
+@media screen and (max-width:1400px) {}
+
+@media screen and (max-width:1200px) {}
+
+@media screen and (max-width:992px) {}
+
+@media screen and (max-width:768px) {
+    h1 {
+        font-size: 45px;
+        line-height: 54px;
+    }
+
+    h2 {
+        font-size: 45px;
+        line-height: 54px;
+    }
+
+    h3 {
+        font-size: 24px;
+        line-height: 28px;
+    }
+
+    button {
+        font-size: 16px;
+    }
+}
+
+@media screen and (max-width:576px) {}
